# cargo-newx

./: .gitignore  Cargo.toml
src/: args.rs  main.rs  util.rs
