[package]
name = "cargo-newx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
git2 = "0.17.2"
log = "0.4.20"
